<resources>
    <string name="app_name">IoTRemote</string>

    <string name="sender_id" translatable="false">224490332382</string>

    <string name="empty_mode_text">Node not setup yet.</string>
    <string name="close">Close</string>
    <string name="add_component">Add component</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="dialog_delete_rule_title">Really delete this rule?</string>
    <string name="dialog_delete_rule_message">Changes cannot be undone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="filter_package" translatable="false">it.giuggi.iotremote.ifttt.implementations.filter.</string>
    <string name="event_package" translatable="false">it.giuggi.iotremote.ifttt.implementations.event.</string>
    <string name="context_package" translatable="false">it.giuggi.iotremote.ifttt.implementations.context.</string>
    <string name="action_package" translatable="false">it.giuggi.iotremote.ifttt.implementations.action.</string>

    <string name="mode_filter">By mode</string>
    <string name="name_filter">By name</string>

    <string name="connected_event">When Node is first connected</string>
    <string name="disconnected_event">When Node is disconnected</string>
    <string name="type_event">When a certain event occurs</string>
    <string name="value_changed_event">When a specific parameter changes</string>
    <string name="value_changed_from_event">When a specific parameter changes from a value</string>
    <string name="value_changed_from_to_event">When a specific parameter changes from a value to a value</string>
    <string name="value_changed_to_event">When a specific parameter changes to a value</string>
    <string name="value_changed_above_event">When a specific parameter goes over a threshold</string>
    <string name="value_changed_below_event">When a specific parameter goes under a threshold</string>

    <string name="wifi_name_context">Wifi name</string>
    <string name="location_context">When you are in this place</string>
    <string name="not_location_context">When you are not in this place</string>
    <string name="context_activity_vehicle">In a vehicle</string>
    <string name="context_activity_bycicle">On a bicycle</string>
    <string name="context_activity_foot">On foot</string>
    <string name="context_activity_running">Running</string>
    <string name="context_activity_walking">Walking</string>
    <string name="context_activity_still">Standing still</string>
    <string name="context_activity_tilting">Tilting</string>

    <string name="notification_action">Show notification</string>
    <string name="play_notification_sound_action">Play notification sound</string>
    <string name="send_command_action">Send command to node</string>

    <string name="dummy">New</string>
    <string name="drawer_title">Main menu</string>
    <string name="choose_place">Choose place</string>
    <string name="choose_place_dots">Choose place…</string>

    <string name="no_conditions">any</string>

    <string name="connective_or">or</string>
    <string name="connective_and">and</string>

    <string name="clause_if">if</string>
    <string name="clause_when">when</string>
    <string name="clause_then">then</string>

    <string name="rule_description_start">Node is</string>

    <string-array name="filters">
        <item>@string/mode_filter</item>
        <item>@string/name_filter</item>
    </string-array>

    <string-array name="filter_classes">
        <item>ModeFilter</item>
        <item>NameFilter</item>
    </string-array>

    <string-array name="events">
        <item>@string/connected_event</item>
        <item>@string/disconnected_event</item>
        <item>@string/type_event</item>
        <item>@string/value_changed_event</item>
        <item>@string/value_changed_from_event</item>
        <item>@string/value_changed_from_to_event</item>
        <item>@string/value_changed_to_event</item>
        <item>@string/value_changed_above_event</item>
        <item>@string/value_changed_below_event</item>
    </string-array>

    <string-array name="event_classes">
        <item>ConnectedEvent</item>
        <item>DisconnectedEvent</item>
        <item>TypeEvent</item>
        <item>ValueChangedEvent</item>
        <item>ValueChangedFromEvent</item>
        <item>ValueChangedFromToEvent</item>
        <item>ValueChangedToEvent</item>
        <item>ValueChangedAboveEvent</item>
        <item>ValueChangedBelowEvent</item>
    </string-array>

    <string-array name="contexts">
        <item>@string/wifi_name_context</item>
        <item>@string/location_context</item>
        <item>@string/not_location_context</item>
        <item>@string/context_activity_vehicle</item>
        <item>@string/context_activity_bycicle</item>
        <item>@string/context_activity_foot</item>
        <item>@string/context_activity_running</item>
        <item>@string/context_activity_walking</item>
        <item>@string/context_activity_still</item>
        <item>@string/context_activity_tilting</item>
    </string-array>

    <string-array name="context_classes">
        <item>WifiNameContext</item>
        <item>LocationContext</item>
        <item>NotLocationContext</item>
        <item>InVehicleContext</item>
        <item>OnBicycleContext</item>
        <item>OnFootContext</item>
        <item>RunningContext</item>
        <item>WalkingContext</item>
        <item>StandStillContext</item>
        <item>TiltingContext</item>
    </string-array>

    <string-array name="actions">
        <item>@string/notification_action</item>
        <item>@string/play_notification_sound_action</item>
        <item>@string/send_command_action</item>
    </string-array>

    <string-array name="action_classes">
        <item>NotificationAction</item>
        <item>PlayNotificationSoundAction</item>
        <item>SendCommandAction</item>
    </string-array>

    <string name="home_network">Home network</string>
    <string name="rules">Active rules</string>
    <string name="passive_rules">Passive rules</string>
    <string name="event_log">Event Log</string>
    <string name="settings">Settings</string>

    <string-array name="drawer_items">
        <item>@string/home_network</item>
        <item>@string/rules</item>
        <item>@string/passive_rules</item>
        <item>@string/event_log</item>
        <item>@string/settings</item>
    </string-array>


    <string name="mode_basic">Basic Mode</string>
    <string name="mode_composite">Composite Mode</string>
    <string name="mode_empty">Empty Mode</string>
    <string name="mode_gpio">GPIO Mode</string>
    <string name="mode_gpio_read">GPIO Read Only Mode</string>
    <string name="mode_sensor">Sensor Mode</string>
    <string name="mode_unknown">Unidentified Mode</string>

    <string-array name="modes_localized">
        <item>@string/mode_basic</item>
        <item>@string/mode_composite</item>
        <item>@string/mode_empty</item>
        <item>@string/mode_gpio</item>
        <item>@string/mode_gpio_read</item>
        <item>@string/mode_sensor</item>
        <item>@string/mode_unknown</item>
    </string-array>


    <string name="parameter_status">Status of the Node</string>
    <string name="parameter_gpio">Current GPIO Pin setting</string>
    <string name="parameter_id">ID of a Mode</string>
    <string name="parameter_current_value">Current value of a Sensor</string>
    <string name="parameter_time_millis">Current time in milliseconds of a Sensor</string>

    <string-array name="parameters_localized">
        <item>@string/parameter_status</item>
        <item>@string/parameter_gpio</item>
        <item>@string/parameter_id</item>
        <item>@string/parameter_current_value</item>
        <item>@string/parameter_time_millis</item>
    </string-array>


    <string name="event_any">Any event</string>
    <string name="event_unknown">An event that is not in this list</string>
    <string name="event_connected">A Node just Connected</string>
    <string name="event_disconnected">A Node just Disconnected</string>
    <string name="event_value_changed">A Node\'s Parameter just changed value</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <!-- For events, ORDER IS IMPORTANT! I'm using .ordinal() of the enum inside IFTTTEvent -->
    <string-array name="events_localized">
        <item>@string/event_any</item>
        <item>@string/event_unknown</item>
        <item>@string/event_connected</item>
        <item>@string/event_disconnected</item>
        <item>@string/event_value_changed</item>
    </string-array>

    <string name="custom_command">Custom command</string>8
    <string name="set_gpio">Set value on GPIO pin</string>
    <string name="set_mode">Set Node operating mode</string>
    <string name="node_name">Node name</string>

    <string-array name="commands_localized">
        <item>@string/custom_command</item>
        <item>@string/set_gpio</item>
        <item>@string/set_mode</item>
    </string-array>

    <string name="settings_category_rules">Rules</string>
    <string name="settings_category_rules_active_enable">Active rule checking</string>
    <string name="settings_category_rules_active_enable_summary">If disabled, events from nodes will be ignored</string>
    <string name="settings_category_rules_passive_enable">Passive rule checking</string>
    <string name="settings_category_rules_passive_enable_summary">Impacts battery life</string>
    <string name="settings_category_rules_passive_interval">Set passive rules checking interval</string>
    <string name="settings_category_rules_passive_interval_summary">The shorter the interval, the bigger the impact on battery life</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_general_web_server">Set Web Server URL</string>
    <string name="settings_category_general_web_server_summary">All data will be loaded from the specified URL</string>
    <string name="settings_category_general_web_server_dialog">Enter Web Server URL</string>

    <string-array name="intervals_localized">
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>15 Minutes</item>
        <item>Half hour</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>12 Hours</item>
        <item>1 Day </item>
    </string-array>

    <string-array name="intervals_values">
        <item>30000</item>
        <item>60000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>21600000</item>
        <item>43200000</item>
    </string-array>

    <string name="default_website" translatable="false">http://hotdoglex.westeurope.cloudapp.azure.com</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="add_at_least_one_action">Add at least one action!</string>
    <string name="greater_than">Threshold:</string>
    <string name="lesser_than">Threshold:</string>
    <string name="clear_event_log">Clear event log</string>
</resources>
