<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_rules">

        <CheckBoxPreference
            android:key="active_rules_enabled"
            android:title="@string/settings_category_rules_active_enable"
            android:persistent="true"
            android:defaultValue="true"
            android:summary="@string/settings_category_rules_active_enable_summary" />

        <CheckBoxPreference
            android:key="passive_rules_enabled"
            android:title="@string/settings_category_rules_passive_enable"
            android:persistent="true"
            android:defaultValue="true"
            android:summary="@string/settings_category_rules_passive_enable_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_general">

        <EditTextPreference
            android:key="web_server_url"
            android:title="@string/settings_category_general_web_server"
            android:summary="@string/settings_category_general_web_server_summary"
            android:persistent="true"
            android:defaultValue="@string/default_website"
            android:dialogTitle="@string/settings_category_general_web_server_dialog" />

    </PreferenceCategory>

</PreferenceScreen>